--- a/Baha'i/Baha/GL/Introduction.html
+++ b/Baha'i/Baha/GL/Introduction.html
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -30,7 +30,7 @@
        <td>
 	   	   <FORM ACTION="p003-346.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -47,7 +47,7 @@
 </tr>
 <tr>
 	<td><a name="para2"></a>
-	This book is a selection from some of the chief writings of Bahá'u'lláh, the Founder of the Bahá'í Faith. Quite literally these are gleanings intended to convey the spirit of Bahá'u'lláh's life and teachings, and not bring together a cross-section of all His writings.
+	This book is a selection from some of the chief writings of Bahá'u'lláh, the Founder of the Bahá'í Faith. Quite literally these are gleanings intended to convey the spirit of Bahá'u'lláh's life and teachings, and not bring together a cross-section of all His writings.  
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -175,7 +175,7 @@
 </tr>
 <tr>
 	<td><a name="para16"></a>
-	The Muslim priests and the Turkish and Persian governments as Islamic church-states could not tolerate the rebirth of the new faith under Bahá'u'lláh. So it was decreed that Bahá'u'lláh be exiled from Baghdád to Constantinople, on the theory that distance would dissipate His influence - a theory repeatedly tried and repeatedly bringing opposite results. In 1863 the exile was ordered. And in the few days while a caravan was being prepared for the long journey, Bahá'u'lláh announced to His followers that He was the One Whose coming the Báb foretold.
+	The Muslim priests and the Turkish and Persian governments as Islamic church-states could not tolerate the rebirth of the new faith under Bahá'u'lláh. So it was decreed that Bahá'u'lláh be exiled from Baghdád to Constantinople, on the theory that distance would dissipate His influence - a theory repeatedly tried and repeatedly bringing opposite results. In 1863 the exile was ordered. And in the few days while a caravan was being prepared for the long journey, Bahá'u'lláh announced to His followers that He was the One Whose coming the Báb foretold.	
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -337,7 +337,7 @@
 </tr>
 <tr>
 	<td><a name="para34"></a>
-	This very briefly summarizes the story which is so intimately associated with the spirit of <i>Gleanings</i>. The reader may be further assisted by the fact that the contents of <i>Gleanings</i> may be divided into five parts. Part one, pages 1-46, proclaims this age as the "Day of God." "The advent of such a Revelation hath been heralded in all the sacred Scriptures." This is the culminating age when the past dispensations will bear fruit as men and women the world over unite in a common faith. Part two, pages 46-136, concerns the Manifestation of God and the significance of the Manifestation in representing the attributes of God. Part three, pages 136-200, deals with basic questions concerning the soul and its immortality. Part four, pages 200-259, concerns spiritual aspects of World Order and the Most Great Peace. Part five, pages 259-346, deals with the duties of the individual and the spiritual meaning of life. Bahá'u'lláh's teachings may be further studied in <i>Bahá'í World Faith</i> and in other translations of His writings. The most detailed history of the Faith is <i>God Passes By</i> written by Shoghi Effendi.
+	This very briefly summarizes the story which is so intimately associated with the spirit of <i>Gleanings</i>. The reader may be further assisted by the fact that the contents of <i>Gleanings</i> may be divided into five parts. Part one, pages <a href="p003-346.html">1</a>-46, proclaims this age as the "Day of God." "The advent of such a Revelation hath been heralded in all the sacred Scriptures." This is the culminating age when the past dispensations will bear fruit as men and women the world over unite in a common faith. Part two, pages <a href="p003-346.html#XIX">46</a>-136, concerns the Manifestation of God and the significance of the Manifestation in representing the attributes of God. Part three, pages <a href="p003-346.html#LXX">136</a>-200, deals with basic questions concerning the soul and its immortality. Part four, pages <a href="p003-346.html#XCIX">200</a>-259, concerns spiritual aspects of World Order and the Most Great Peace. Part five, pages <a href="p003-346.html#CXXII">259</a>-346, deals with the duties of the individual and the spiritual meaning of life. Bahá'u'lláh's teachings may be further studied in <i>Bahá'í World Faith</i> and in other translations of His writings. The most detailed history of the Faith is <i><a href="../../SE/GPB/Cover.html">God Passes By</a></i> written by Shoghi Effendi.
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -408,7 +408,7 @@
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -421,7 +421,7 @@
        <td>
 	   	   <FORM ACTION="p003-346.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
