--- a/Baha'i/Baha/GL/p003-346.html
+++ b/Baha'i/Baha/GL/p003-346.html
@@ -50,7 +50,17 @@
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">3</DIV></center><p></small></td>
 </tr>
+
 <tr>
+	 <td colspan=3>
+	 <blockquote>
+	 <br>
+	 From <b><a href="Introduction.html#para33">Introduction</a></b> section: <i>the contents of Gleanings may be divided into five parts. Part one, pages 1-46, proclaims this age as the "Day of God." "The advent of such a Revelation hath been heralded in all the sacred Scriptures." This is the culminating age when the past dispensations will bear fruit as men and women the world over unite in a common faith.
+	 </i></blockquote>
+	 </td>
+</tr>
+
+ <tr>
 	<td><a name="para2"></a>
 	<a name="I"/><span style="background-color: #ffffCC" TITLE="Section 1">I</span>.  Lauded and glorified art Thou, O Lord, my God!  How can I make mention of Thee, assured as I am that no tongue, however deep its wisdom, can befittingly magnify Thy name, nor can the bird of the human heart, however great its longing, ever hope to ascend into the heaven of Thy majesty and knowledge. 
 	</td>
@@ -915,6 +925,16 @@
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
+
+<tr>
+	 <td colspan=3>
+	 <blockquote>
+	 <br>
+	 From <b><a href="Introduction.html#para33">Introduction</a></b> section: <i>the contents of Gleanings may be divided into five parts...Part two, pages 46-136, concerns the Manifestation of God and the significance of the Manifestation in representing the attributes of God.
+	 </i></blockquote>
+	 </td>
+</tr>
+
 <tr>
 	<td><a name="para92"></a>
 	<a name="XIX"/><span style="background-color: #ffffCC" TITLE="Section 19">XIX</span>.  To every discerning and illuminated heart it is evident that God, the unknowable Essence, the Divine Being, is immensely exalted beyond every human attribute, such as corporeal existence, ascent and descent, egress and regress.  Far be it from His glory that human tongue should adequately recount <a name="p47"></a>His praise, or that human heart comprehend His fathomless mystery.  He is, and hath ever been, veiled in the ancient eternity of His Essence, and will remain in His Reality everlastingly hidden from the sight of men.  "No vision taketh in Him, but He taketh in all vision; He is the Subtile, the All-Perceiving."... 
@@ -1655,7 +1675,7 @@
 </tr>
 <tr>
 	<td><a name="para169"></a>
-	Justice is, in this day, bewailing its plight, and Equity groaneth beneath the yoke of oppression.  The thick clouds of tyranny have darkened the face of the earth, and enveloped its peoples.  Through the movement of Our Pen of glory We have, at the bidding of the omnipotent Ordainer, breathed a new p93 life into every human frame, and instilled into every word a fresh potency.  All created things proclaim the evidences of this world-wide regeneration.  This is the most great, the most joyful tidings imparted by the Pen of this wronged One to mankind.  Wherefore fear ye, O My well-beloved ones?  Who is it that can dismay you?  A touch of moisture sufficeth to dissolve the hardened clay out of which this perverse generation is molded.  The mere act of your gathering together is enough to scatter the forces of these vain and worthless people.... 
+	Justice is, in this day, bewailing its plight, and Equity groaneth beneath the yoke of oppression.  The thick clouds of tyranny have darkened the face of the earth, and enveloped its peoples.  Through the movement of Our Pen of glory We have, at the bidding of the omnipotent Ordainer, breathed a new life into every human frame, and instilled into every word a fresh potency.  All created things proclaim the evidences of this world-wide regeneration.  This is the most great, the most joyful tidings imparted by the Pen of this wronged One to mankind.  Wherefore fear ye, O My well-beloved ones?  Who is it that can dismay you?  A touch of moisture sufficeth to dissolve the hardened clay out of which this perverse generation is molded.  The mere act of your gathering together is enough to scatter the forces of these vain and worthless people.... 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
@@ -2626,6 +2646,8 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	['Abá-Basír and Siyyid Ashraf-i-Zanjání'] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para121">p. 73</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para241">p. 199</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 2, pp. <a href="../../Others/ROB/V2/p222-235Ch10.html#p223">223</a>-32.<p> 
+	
 	["Call thou to mind..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2 <a href="../../Others/ROB/V2/p222-235Ch10.html#p229">p. 229</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">135</DIV></center></small></td>
@@ -2671,6 +2693,16 @@
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">136</DIV></center></small></td>
 </tr>
+
+<tr>
+	 <td colspan=3>
+	 <blockquote>
+	 <br>
+	 From <b><a href="Introduction.html#para33">Introduction</a></b> section: <i>the contents of Gleanings may be divided into five parts...Part three, pages 136-200, deals with basic questions concerning the soul and its immortality.
+	 </i></blockquote>
+	 </td>
+</tr>
+
 <tr>
 	<td><a name="para273"></a>
 	<a name="LXX"/><span style="background-color: #ffffCC" TITLE="Section 70 (The Kitáb-i-Aqdas)">LXX</span>.  The world's equilibrium hath been upset through the vibrating influence of this most great, this new World Order.  Mankind's ordered life hath been revolutionized through the agency of this unique, this wondrous System--the like of which mortal eyes have never witnessed. 
@@ -3905,6 +3937,16 @@
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
+
+<tr>
+	 <td colspan=3>
+	 <blockquote>
+	 <br>
+	 From <b><a href="Introduction.html#para33">Introduction</a></b> section: <i>the contents of Gleanings may be divided into five parts...Part four, pages 200-259, concerns spiritual aspects of World Order and the Most Great Peace.
+	 </i></blockquote>
+	 </td>
+</tr>
+
 <tr>
 	<td><a name="para402"></a>
 	<a name="p200"/><a name="XCIX"/><span style="background-color: #ffffCC" TITLE="Section 99">XCIX</span>.  The vitality of men's belief in God is dying out in every land; nothing short of His wholesome medicine can ever restore it.  The corrosion of ungodliness is eating into the vitals of human society; what else but the Elixir of His potent Revelation can cleanse and revive it?  Is it within human power, O Hakím, to effect in the constituent elements of any of the minute and indivisible particles of matter so complete a transformation as to transmute it into purest gold?  Perplexing and difficult as this may appear, the still greater task of converting satanic strength into heavenly power is one that We have been empowered to accomplish.  The Force capable of such a transformation transcendeth the potency of the Elixir itself.  The Word of God, alone, can claim the distinction of being endowed with the capacity required for so great and far-reaching a change.
@@ -5161,6 +5203,16 @@
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
+
+<tr>
+	 <td colspan=3>
+	 <blockquote>
+	 <br>
+	 From <b><a href="Introduction.html#para33">Introduction</a></b> section: <i>the contents of Gleanings may be divided into five parts...Part five, pages 259-346, deals with the duties of the individual and the spiritual meaning of life.
+	 </i></blockquote>
+	 </td>
+</tr>
+
 <tr>
 	<td><a name="para531"></a>
 	<a name="CXXII"/><span style="background-color: #ffffCC" TITLE="Section 122">CXXII</span>.  Man is the supreme <span style="background-color: #ffffCC" TITLE="Literally a charm which drew down the power of heaven to protect its wearer. A symbol of man protected by the power of God.">Talisman</span>.  Lack of a proper education hath, however, deprived him of that which he doth inherently possess.  Through a word <a name="p260"></a>proceeding out of the mouth of God he was called into being; by one word more he was guided to recognize the Source of his education; by yet another word his station and destiny were safeguarded.  The Great Being saith:  Regard man as a mine rich in gems of inestimable value.  Education can, alone, cause it to reveal its treasures, and enable mankind to benefit therefrom.  If any man were to meditate on that which the Scriptures, sent down from the heaven of God's holy Will, have revealed, he would readily recognize that their purpose is that all men shall be regarded as one soul, so that the seal bearing the words "The Kingdom shall be God's" may be stamped on every heart, and the light of Divine bounty, of grace, and mercy may envelop all mankind. The one true God, exalted be His glory, hath wished nothing for Himself.  The allegiance of mankind profiteth Him not, neither doth its perversity harm Him.  The Bird of the Realm of Utterance voiceth continually this call:  "All things have I willed for thee, and thee, too, for thine own sake."  If the learned and worldly-wise men of this age were to allow mankind to inhale the fragrance of fellowship and love, every understanding heart would apprehend the meaning of true liberty, and discover the secret of undisturbed peace and absolute composure. Were the earth to attain this station and be illumined with its light it could then be truly said of it:  "Thou shall see in it no hollows or rising hills."
