--- a/Baha'i/Baha/KA/Preface.html
+++ b/Baha'i/Baha/KA/Preface.html
@@ -13,7 +13,7 @@
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -26,7 +26,7 @@
        <td>
 	   	   <FORM ACTION="p001-011Intro.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -47,7 +47,7 @@
 	   Shoghi Effendi had stated that the English translation of the Aqdas should be "copiously annotated". The policy followed in preparing the notes has been to concentrate on those points which might strike a non-Arabic-speaking reader as obscure or which, for various reasons, require elucidation  or background  information.  They are  not intended to be a comprehensive commentary on the text beyond these fundamental requirements.<p>
 	   The notes, which are placed following the Synopsis and Codification, are numbered sequentially. Each is preceded by a quotation of the passage to which it relates, and indicates the number of the paragraph in which this appears. This facilitates cross-reference between the text and the notes, while making it possible for readers to study the notes without repeatedly consulting the text, if they so prefer. It is hoped in this way to meet the needs of readers of a wide range of backgrounds and interests.<p>
 	   The index provides a guide to subjects in all sections of the volume.<p>
-	   The significance and character of the Kitáb-i-Aqdas and the range of subjects it contains have been graphically depicted by Shoghi Effendi in his history of the first Bahá'í century entitled <i>God Passes By</i>. As an assistance to the reader, these passages are provided in the section that immediately follows the introduction. The Synopsis and Codification, which is republished in this volume, serves as another aid for obtaining an overview of the Book.<p>
+	   The significance and character of the Kitáb-i-Aqdas and the range of subjects it contains have been graphically depicted by Shoghi Effendi in his history of the first Bahá'í century entitled <i><a href="../../SE/GPB/Cover.html">God Passes By</a></i>. As an assistance to the reader, these passages are provided in the <a href="p012-018Desc.html">section</a> that immediately follows the introduction. The <a href="p141-164Synopsis.html">Synopsis and Codification</a>, which is republished in this volume, serves as another aid for obtaining an overview of the Book.<p>
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="viii">viii</a></center><p></small></td>
@@ -59,7 +59,7 @@
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
@@ -72,7 +72,7 @@
        <td>
 	   	   <FORM ACTION="p001-011Intro.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
