--- a/Baha'i/Baha/KA/p012-018Desc.html
+++ b/Baha'i/Baha/KA/p012-018Desc.html
@@ -41,7 +41,11 @@
 	   Revealed soon after Bahá'u'lláh had been transferred to the <a href="../../Others/ROB/V3/p253-274Ch12.html#facingp274">house of `Udi Khammar</a> (circa 1873), at a time when He was still encompassed by the tribulations that had afflicted Him, through the acts committed by His enemies and the professed adherents of His Faith, this Book, this treasury enshrining the priceless gems of His Revelation, stands out, by virtue of the principles it inculcates, the administrative
 	   </td>
        <td width="0%"></td>
-       <td width="20%" VALIGN=top><small><center><a name="p12">12</a></center><p></small></td>
+       <td width="20%" VALIGN=top><small><center><a name="p12">12</a></center><p>
+	   <hr>
+	   <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para276">p. 213</a><p>
+	   <i><a href="../KI/Cover.html">The Kitáb-i-Íqán</a></i>	   
+	   </small></td>
 </tr>
 <tr>
        <td>
