--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -41,7 +41,7 @@
 	 <tr>
 	 	 <td colspan=2><center><h3>IN THE NAME OF HIM WHO<br>IS THE SUPREME RULER<br>OVER ALL THAT HATH BEEN<br>AND ALL THAT IS TO BE</h3></center></td>
 		 <td><small>
-		 [The Kitáb-i-Aqdas] <i>The Revelation of Bahá'u'lláh</i>, vol. 3, chapters <a href="../../Others/ROB/V3/p275-307Ch13.html">13</a>, <a href="../../Others/ROB/V3/p308-321Ch14.html">14</a>, <a href="../../Others/ROB/V3/p322-342Ch15.html">15</a>, <a href="../../Others/ROB/V3/p343-370Ch16.html">16</a>, <a href="../../Others/ROB/V3/p371-399Ch17.html">17</a>
+		 [The Kitáb-i-Aqdas] <i>The Revelation of Bahá'u'lláh</i>, vol. 3, chapters <a href="../../Others/ROB/V3/p275-307Ch13.html">13</a>, <a href="../../Others/ROB/V3/p308-321Ch14.html">14</a>, <a href="../../Others/ROB/V3/p322-342Ch15.html">15</a>, <a href="../../Others/ROB/V3/p343-370Ch16.html">16</a>, <a href="../../Others/ROB/V3/p371-399Ch17.html">17</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para276">p. 213</a>
 		 </small></td>
 		 <td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">19</DIV></center></small></td>
 	 </tr>
@@ -834,7 +834,8 @@
 		 </td>
 	 	 <td VALIGN=top><small>
 		 <hr>
-		 ["Hearken ye, O Rulers..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 p. <a href="../../Others/ROB/V3/p147-173Ch08.html#p155">155</a>
+		 ["Hearken ye, O Rulers..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 p. <a href="../../Others/ROB/V3/p147-173Ch08.html#p155">155</a><p>
+		 ["the Rulers of America..."] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para258">p. 207</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para36">p. 254</a>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para36">p. 344</a>
 		 <p></small></td>
 		 <td>&nbsp;</td>
 	 </tr>
@@ -937,7 +938,8 @@
 		 </td>
 		 <td VALIGN=top><small>
 		 <hr>
-		 ["Say: O leaders of religion!..."] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para190">p. 128</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#XCVIII">XCVIII</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 p. <a href="../../Others/ROB/V3/p147-173Ch08.html#p163">163</a>, p. <a href="../../Others/ROB/V3/p221-252Ch11.html#p240">240</a>; vol. 4 p. <a href="../../Others/ROB/V4/p205-213Ch14.html#p212">212</a>
+		 ["Say: O leaders of religion!..."] <i>Epistle to the Son of the Wolf</i>, <a href="../EW/p001-182.html#para190">p. 128</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#XCVIII">XCVIII</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 p. <a href="../../Others/ROB/V3/p147-173Ch08.html#p163">163</a>, p. <a href="../../Others/ROB/V3/p221-252Ch11.html#p240">240</a>; vol. 4 p. <a href="../../Others/ROB/V4/p205-213Ch14.html#p212">212</a><p>
+		 ["weigh not the Book of God..."] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para265">p. 209</a> 
 		 <p></small></td>
 		 <td>&nbsp;</td>
 	 </tr>
