--- a/Baha'i/Baha/KA/p103-140QA.html
+++ b/Baha'i/Baha/KA/p103-140QA.html
@@ -35,7 +35,7 @@
 <tr>
 	<td width="5%">&nbsp;</td>
 	<td width="77%"><center><h2>QUESTIONS AND ANSWERS</h2></center></td>
-	<td width="15%"><small>[Questions And Answers] <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p26">p. 26</a>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p278">p. 278</a>-9, <a href="../../Others/ROB/V3/p275-307Ch13.html#p284">p. 284</a></small></td>
+	<td width="15%"><small>[Questions And Answers] <i>God Passes By</i>, <a href="../../SE/GPB/p087-234SecondPeriod.html#para292">p. 219</a>, <a href="../../SE/GPB/p321-401FourthPeriod.html#para122">p. 383</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p018-044Ch03.html#p26">p. 26</a>, vol. 3 <a href="../../Others/ROB/V3/p275-307Ch13.html#p278">p. 278</a>-9, <a href="../../Others/ROB/V3/p275-307Ch13.html#p284">p. 284</a></small></td>
 	<td VALIGN=top><small><center><a name="p103">103</a></center></small></td>
 </tr>
 <tr>
@@ -51,7 +51,7 @@
 		ANSWER:  The Most Great Festival commenceth late in the afternoon of the thirteenth day of the second month of the year according to the Bayán.  On the first, ninth and twelfth days of this Festival, work is forbidden.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note138">138</a>
-	</small></td>
+	</small></td>	
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">105</DIV></center></small></td>
 </tr>
 <tr>
@@ -117,7 +117,7 @@
 		ANSWER:  The basic sum on which Huqúqu'lláh is payable is nineteen mithqáls of gold.  In other words, when money to the value of this sum hath been acquired, a payment of Huqúq falleth due.  Likewise Huqúq is payable when the value, not the number, of other forms of property reacheth the prescribed amount.  Huqúqu'lláh is payable no more than once.  A person, for instance, who <a name="p109"></a> acquireth a thousand mithqáls of gold, and payeth the Huqúq, is not liable to make a further such payment on this sum, but only on what accrueth to it through commerce, business and the like.  When this increase, namely the profit realized, reacheth the prescribed sum, one must carry out what God hath decreed.  Only when the principal changeth hands is it once more subject to payment of Huqúq, as it was the first time.  The Primal Point hath directed that Huqúqu'lláh must be paid on the value of whatsoever one possesseth; yet, in this Most Mighty Dispensation, We have exempted the household furnishings, that is such furnishings as are needed, and the residence itself.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note125">125</a>
-	</small></td>
+	</small></td>	
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">109</DIV></center></small></td>
 </tr>
 <tr>
@@ -136,7 +136,7 @@
 		ANSWER:  All are charged with obedience to the Kitáb-i-Aqdas; whatsoever is revealed therein is the Law of God amid His servants.  The injunction on pilgrims to the sacred House to shave the head hath been lifted.<p>
 	</td>
 	<td VALIGN=top><small>Notes <a href="p165-251Notes.html#note54">54</a>, <a href="p165-251Notes.html#note68">68</a>
-	</small></td>
+	</small></td>	
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -173,7 +173,7 @@
 		ANSWER:  Facing in the direction of the Qiblih is a fixed requirement for the recitation of obligatory prayer, but for other prayers and devotions one may follow what the merciful Lord hath revealed in the Qur'án:  "Whichever way ye turn, there is the face of God."<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note7">7</a>
-	</small></td>
+	</small></td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -183,7 +183,7 @@
 		ANSWER:  Although the words "at the hour of dawn" are used in the Book of God, it is acceptable to God at the earliest dawn of day, between dawn and sunrise, or even up to two hours after sunrise.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note142">142</a>
-	</small></td>
+	</small></td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -275,7 +275,7 @@
 		ANSWER:  It is an obligation to make pilgrimage to one of the two sacred Houses; but as to which, it is for the pilgrim to decide.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note54">54</a>
-	</td>
+	</td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -312,7 +312,7 @@
 		ANSWER:  By pilgrimage to the sacred House, which is enjoined upon men, is intended both the Most Great House in Baghdád and the House of the Primal Point in Shíráz; pilgrimage to either of these Houses sufficeth.  They may thus make pilgrimage to whichever lieth nearer to the place where they reside.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note54">54</a>, <a href="p165-251Notes.html#note154">154</a>
-	</td>
+	</td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -340,7 +340,7 @@
 		ANSWER:  By the two Houses is intended the Most Great House and the House of the Primal Point. As for other sites, the people of the areas where these are situated may choose to preserve either each house wherein the throne hath been established, or one of them.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note154">154</a>
-	</td>
+	</td>		
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">117</DIV></center></small></td>
 </tr>
 <tr>
@@ -370,7 +370,7 @@
 	<td VALIGN=top><small>* The vernal equinox in the northern hemisphere
 	<hr>Note <a href="p165-251Notes.html#note26">26</a>
 	</small>
-	</td>
+	</td>		
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">118</DIV></center></small></td>
 </tr>
 <tr>
@@ -434,7 +434,7 @@
 		ANSWER:  In the laws revealed in Persian We have ordained that in this Most Mighty Dispensation the residence and the household furnishings are exempt--that is, such furnishings as are necessary.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note125">125</a>
-	</small></td>
+	</small></td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -453,7 +453,7 @@
 		ANSWER:  In such an event the Huqúq is not payable.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note125">125</a>
-	</small></td>
+	</small></td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -463,7 +463,7 @@
 		ANSWER:  In this event as well, payment of Huqúq is not required.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note125">125</a>
-	</small></td>
+	</small></td>		
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">121</DIV></center></small></td>
 </tr>
 <tr>
@@ -575,7 +575,7 @@
 	<br><hr>
 	[Re-revelation] <i>The Revelation of Bahá'u'lláh</i>, vol. 4 p. <a href="../../Others/ROB/V4/p368-390Ch24.html#p372">372</a>
 	</small>
-	</td>
+	</td>		
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">124</DIV></center></small></td>
 </tr>
 <tr>
@@ -685,7 +685,7 @@
 		ANSWER:  A person hath full jurisdiction over his property.  If he is able to discharge the Huqúqu'lláh, and is free of debt, then all that is recorded in his will, and any declaration or avowal it containeth, shall be acceptable.  God, verily, hath permitted him to deal with that which He hath bestowed upon him in whatever manner he may desire.<p>
 	</td>
 	<td VALIGN=top><small>Notes <a href="p165-251Notes.html#note38">38</a>, <a href="p165-251Notes.html#note125">125</a>, <a href="p165-251Notes.html#note136">136</a>
-	</small></td>
+	</small></td>	
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -785,7 +785,7 @@
 		ANSWER:  Outstanding debts and payments of Huqúq should be settled from the remainder of the estate, but if this is insufficient for the purpose, the shortfall should be met from his residence and personal clothing.<p>
 	</td>
 	<td VALIGN=top><small>Notes <a href="p165-251Notes.html#note47">47</a>, <a href="p165-251Notes.html#note125">125</a>
-	</small></td>
+	</small></td>	
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -832,7 +832,7 @@
 	</td>
 	<td VALIGN=top><small>* Qur'án 2:115</small>
 	<hr><small>Notes <a href="p165-251Notes.html#note10">10</a>, <a href="p165-251Notes.html#note19">19</a>
-	</td>
+	</td>	
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -960,7 +960,7 @@
 		ANSWER:  If consultation among the first group of people assembled endeth in disagreement, new people should be added, after which persons to the number of the Greatest Name, or fewer or more, shall be chosen by lot.  Whereupon the consultation shall be renewed, and the outcome, whatever it is, shall be obeyed.  If, however, there is still disagreement, the same procedure should be repeated once more, and the decision of the majority shall prevail.  He, verily, guideth whomsoever He pleaseth to the right way.<p>
 	</td>
 	<td VALIGN=top><small>Note <a href="p165-251Notes.html#note52">52</a>
-	</td>
+	</td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -1015,7 +1015,7 @@
 	<td VALIGN=top><hr><small>
 	[Education of Children] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p322-342Ch15.html#p326">p. 326</a>-327
 	</small>
-	</td>
+	</td>		
 	<td>&nbsp;</td>
 </tr>
 <tr>
@@ -1024,8 +1024,8 @@
 		<a name="p139"></a>He is God, exalted be He, the Lord of majesty and power!  The Prophets and Chosen Ones have all been commissioned by the One True God, magnified be His glory, to nurture the trees of human existence with the living waters of uprightness and understanding, that there may appear from them that which God hath deposited within their inmost selves.  As may be readily observed, each tree yieldeth a certain fruit, and a barren tree is but fit for fire.  The purpose of these Educators, in all they said and taught, was to preserve man's exalted station.  Well is it with him who in the Day of God hath laid fast hold upon His precepts and hath not deviated from His true and fundamental Law.  The fruits that best befit the tree of human life are trustworthiness and godliness, truthfulness and sincerity; but greater than all, after recognition of the unity of God, praised and glorified be He, is regard for the rights that are due to one's parents.  This teaching hath been mentioned in all the Books of God, and reaffirmed by the Most Exalted Pen.  Consider that which the Merciful Lord hath revealed in the Qur'án, exalted are His words:  "Worship ye God, join with Him no peer or likeness; and show forth kindliness and charity towards your parents. . ."  Observe how loving-kindness to one's parents hath been linked to recognition of the one true God!  Happy they who are endued with true wisdom and understanding, who see and perceive, who read and understand, and who observe that which God hath <a name="p140"></a> revealed in the Holy Books of old, and in this incomparable and wondrous Tablet.<p>
 	</td>
 	<td VALIGN=top><hr><small>
-		 [Parents] <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V2/p469-476Index.html#Parents">vol. 2</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Parents">vol. 3</a>
-		 </td>
+		 [Parents] <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V2/p469-476Index.html#Parents">vol. 2</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Parents">vol. 3</a>		 
+		 </td>			
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">139</DIV><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><DIV TITLE="Page number location is approximate">140</DIV></center></small></td>
 </tr>
 <tr>
