--- a/Baha'i/Baha/KA/p258-296Index.html
+++ b/Baha'i/Baha/KA/p258-296Index.html
@@ -117,6 +117,7 @@ Shoghi Effendi, Writings of -- should be Shoghi Effendi, Writings
        <td width="20%" VALIGN=top><small><center><a name="p258">258</a></center><p></small>
 	   <small>
 	   <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p277-299Index.html#Kitáb-i-Aqdas">Index</a><p>
+	   <i>God Passes By</i>, <a href="../../SE/GPB/p413-436Index.html#Aqdas,Kitáb-i-">Index</a><p>
 	   <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Kitáb-i-Aqdas">Index</a>, vol. 2 <a href="../../Others/ROB/V2/p469-476Index.html#Kitáb-i-Aqdas">Index</a>, vol. 3 <a href="../../Others/ROB/V3/p467-483Index.html#Kitáb-i-Aqdas">Index</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Kitáb-i-Aqdas">Index</a>
 	   </small></td>
 </tr>
